Update dependencies and add fl_chart package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,13 +19,14 @@ dependencies:
 
   ### State Management
   flutter_bloc: ^8.1.6
-  equatable: ^2.0.5
+  equatable: ^2.0.7
 
   ### Service Locator and Dependency Injection
   get_it: ^8.0.2
 
   ### UI
   cupertino_icons: ^1.0.8
+  fl_chart: ^0.69.2
 
   ### Utils ###
   intl: ^0.20.1
@@ -35,12 +36,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
